# Forward

./: Dockerfile  README.md  app.py  autopost_handler.py  blacklist_handler.py  bot_creator_handler.py  bot_handler.py  button_removal_handler.py  char_limit_handler.py  command_handlers.py  config.json  config.py  dashboard.py  database_handler.py  db.py  delay_handler.py  deployment.md  duplicate_filter_handler.py  forwarded_filter_handler.py  forwarding_control_handler.py  gunicorn.conf.py  inline_button_filter_handler.py  issue.txt  jinja_translations.py  language_filter_handler.py  link_cleaner_handler.py  main.py  media_filters_handler.py  message_customization_handler.py  message_map.json  message_update_handler.py  models.py  pyproject.toml  rate_limit_handler.py  replacements_handler.py  requirements.txt  routes.py  show_stats_handler.py  telegram_bot.py  telegram_bot_runner.sh  (+11 more)
templates/: admins.html  base.html  dashboard.html  error.html  guest_features.html  index.html  login.html  settings.html  settings.html.backup
